--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@pollinations/react": "^2.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "axios": "^1.7.9",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
