--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "zod": "^3.23.3"
   },
